# parallel-coco

./: README.md  notebook.ipynb  pyproject.toml
parallel_coco/: __init__.py  interface.py
parallel_coco/algorithms/: __init__.py  processing.py
