[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parallel-coco"
authors = [
    {name = "Aditi Juneja", email = "aditijuneja7@gmail.com"},
]
description = "A parallel backend for coco Python library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ["joblib",]
dynamic = ["version"]

[tool.hatch.version]
path = "parallel_coco/__init__.py"

[project.optional-dependencies]
developer = [
    'pre-commit',
]

[tool.hatch.build.targets.wheel]
packages = ["parallel_coco",]

[project.entry-points."coco.backends"]
parallel = "parallel_coco.interface:BackendInterface"

[tool.ruff]
line-length = 88
target-version = 'py310'

[tool.ruff.lint]
per-file-ignores = { "__init__.py" = ['I', 'F403'] }
